[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/Game_Theme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/UI/Inventory.gd" type="Script" id=4]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -44.0
script = ExtResource( 4 )

[node name="Weapon_Info" type="RichTextLabel" parent="."]
anchor_left = 0.366071
anchor_top = 0.0396825
anchor_right = 0.973214
anchor_bottom = 0.952381
theme = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "gdfgsdfdsg"
text = "gdfgsdfdsg"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Weapons_Container" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = 5.0
margin_right = 80.0
margin_bottom = 121.0
focus_mode = 2

[node name="Sword" type="Button" parent="Weapons_Container"]
margin_right = 79.0
margin_bottom = 20.0
rect_min_size = Vector2( 54, 20 )
theme = ExtResource( 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
disabled = true
text = "????"
clip_text = true

[node name="Bow" type="Button" parent="Weapons_Container"]
margin_top = 24.0
margin_right = 79.0
margin_bottom = 44.0
rect_min_size = Vector2( 54, 20 )
theme = ExtResource( 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
disabled = true
text = "????"
clip_text = true

[node name="Bomb" type="Button" parent="Weapons_Container"]
margin_top = 48.0
margin_right = 79.0
margin_bottom = 68.0
rect_min_size = Vector2( 54, 20 )
theme = ExtResource( 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
disabled = true
text = "????"
clip_text = true

[node name="Staff" type="Button" parent="Weapons_Container"]
margin_top = 72.0
margin_right = 79.0
margin_bottom = 92.0
rect_min_size = Vector2( 54, 20 )
theme = ExtResource( 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
disabled = true
text = "????"
clip_text = true

[node name="Shield" type="Button" parent="Weapons_Container"]
margin_top = 96.0
margin_right = 79.0
margin_bottom = 116.0
rect_min_size = Vector2( 54, 20 )
theme = ExtResource( 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
disabled = true
text = "????"
clip_text = true

[connection signal="focus_entered" from="Weapons_Container/Sword" to="." method="_on_Sword_focus_entered"]
[connection signal="pressed" from="Weapons_Container/Sword" to="." method="_on_Sword_pressed"]
[connection signal="focus_entered" from="Weapons_Container/Bow" to="." method="_on_Bow_focus_entered"]
[connection signal="pressed" from="Weapons_Container/Bow" to="." method="_on_Bow_pressed"]
[connection signal="focus_entered" from="Weapons_Container/Bomb" to="." method="_on_Bomb_focus_entered"]
[connection signal="pressed" from="Weapons_Container/Bomb" to="." method="_on_Bomb_pressed"]
[connection signal="focus_entered" from="Weapons_Container/Staff" to="." method="_on_Heal_focus_entered"]
[connection signal="pressed" from="Weapons_Container/Staff" to="." method="_on_Staff_pressed"]
[connection signal="focus_entered" from="Weapons_Container/Shield" to="." method="_on_Shield_focus_entered"]
[connection signal="pressed" from="Weapons_Container/Shield" to="." method="_on_Shield_pressed"]
